--- a/Zadanie 1.1.1
+++ b/Zadanie 1.1.1
@@ -3,7 +3,11 @@
 #include <stdlib.h>
 #include <limits.h>
 
-
+char nasob_zlomky(int c1, int m1, int c2, int m2, int *c3, int *d3)
+{
+	int i, citatel, menovatel;
+	
+}
 
 main()
 {
@@ -15,5 +19,5 @@ main()
 	printf("zadaj citalela a menovatela druheho zlomku: ");
 	scanf("%d %d",&c2,&m2);
 	
-	
+	nasob_zlomky(c1,m1,c2,m2,&c3,&d3);
 }
