--- a/Zadanie 1.1.1
+++ b/Zadanie 1.1.1
@@ -30,6 +30,11 @@ char nasob_zlomky(int c1, int m1, int c2, int m2, int *c3, int *d3)
 			menovatel/=i;
 		}
 	}
+	
+	c3=&citatel;
+	d3=&menovatel;
+	printf("%d %d\n",*c3,*d3);         // pre kontrolu
+	printf("%p %p\n",c3,d3);
 }
 
 main()
